[package]
name = "myso-contra-crypto"
version = "0.1.0"
edition = "2024"
authors = ["Brandon Shaw <brandon@mysocial.network>"]
license = "Apache-2.0"
description = "Cryptographic proof generation for MySo confidential transfers (Contra)"
publish = false

[dependencies]
bcs = "0.1.6"
blake2 = "0.10"
bulletproofs = "5.0.0"
clear_on_drop = { version = "0.2.5", default-features = false, features = ["no_cc"] }
curve25519-dalek = { version = "4.1", default-features = false, features = ["alloc", "digest"] }
merlin = "3.0.0"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "2.0"

[dev-dependencies]
hex = "0.4"
