[package]
name = "myso-graphql"
version = "0.0.1"
authors = ["Brandon Shaw <brandon@mysocial.network>"]
repository = "https://github.com/The-Social-Proof-Foundation/myso-rust-sdk/"
license = "Apache-2.0"
edition = "2024"
description = "GraphQL client for MySo blockchain"
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg=doc_cfg",
    "-Zunstable-options",
    "--generate-link-to-definition"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"
myso-sdk-types = { version = "0.2.2", path = "../myso-sdk-types", features = ["serde"] }
myso-graphql-macros = { version = "0.0.1", path = "../myso-graphql-macros" }
base64ct = { version = "1.8.0", features = ["alloc"] }
bcs = "0.1.6"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
wiremock = "0.6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }
